--- a/.github/workflows/on_master.yml
+++ b/.github/workflows/on_master.yml
@@ -3,8 +3,6 @@ name: Java CI with Maven
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
 
 jobs:
   build:
@@ -23,10 +21,7 @@ jobs:
           distribution: 'temurin'
       - name: Build with Maven
         run: mvn -B package --file spring-oauth2/pom.xml
-      - name: Add coverage to PR
-        # https://github.com/marketplace/actions/jacoco-report
-        id: jacoco
-        uses: madrapps/jacoco-report@v1.3
+      - name: Generate JaCoCo Badge
+        uses: cicirello/jacoco-badge-generator@v2
         with:
-          paths: ${{ github.workspace }}/spring-oauth2/target/site/jacoco/jacoco.xml
-          token: ${{ secrets.GITHUB_TOKEN }}
+          generate-branches-badge: true
