--- a/.github/workflows/on_pr.yml
+++ b/.github/workflows/on_pr.yml
@@ -1,8 +1,8 @@
-name: Java CI with Maven
+name: Java tests
 
 on:
   pull_request:
-    branches: [ "master" ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -14,13 +14,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           java-version: '20'
           distribution: 'temurin'
+
       - name: Build with Maven
         run: mvn -B package --file spring-oauth2/pom.xml
+
       - name: Add coverage to PR
         # https://github.com/marketplace/actions/jacoco-report
         id: jacoco
