--- a/spring-oauth2/pom.xml
+++ b/spring-oauth2/pom.xml
@@ -130,6 +130,7 @@
         </configuration>
         <executions>
           <execution>
+            <phase>validate</phase>
             <goals>
               <goal>check</goal>
             </goals>
