--- a/spring-oauth2/Dockerfile
+++ b/spring-oauth2/Dockerfile
@@ -1,3 +1,2 @@
 FROM openjdk:20
-COPY ../target/oauth2-demo.jar app.jar
-ENTRYPOINT ["java","-jar","-Dspring.profiles.active=prod","/app.jar"]
+ENTRYPOINT ["java","-jar","-Dspring.profiles.active=prod","../target/oauth2-demo.jar"]
