--- a/.github/workflows/on_master.yml
+++ b/.github/workflows/on_master.yml
@@ -12,11 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 20
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '20'
+          java-version: '21'
 
       - name: Build with Maven
         run: mvn -B test --file spring-oauth2/pom.xml
