--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.9"
 
 services:
-  db:
+  mysql:
     container_name: mysql
-    image: mysql:latest
+    image: mysql:8.3.0
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: oauth2_db
@@ -13,28 +13,38 @@ services:
       - "3306:3306"
     healthcheck:
       test: mysqladmin ping -h 127.0.0.1 -u root --password=$$MYSQL_ROOT_PASSWORD
-      interval: 2s
-      timeout: 10s
-      retries: 10
+      interval: 3s
+      timeout: 20s
+      retries: 20
 
-  app:
-    container_name: spring-app
-    build: .
+  backend:
+    container_name: backend
+    image: ${BACKEND_IMAGE}
+    build:
+      context: ./spring-oauth2
+      dockerfile: ${DOCKERFILE:-Dockerfile-local}
     ports:
       - "8080:8080"
+      - "8090:8090"
     depends_on:
-      db:
+      mysql:
         condition: service_healthy
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/oauth2_db
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      - GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}
+      - GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}
+      - EMAIL_PASSWORD=${EMAIL_PASSWORD}
+      - REMOTE_HOST=${REMOTE_HOST}
 
-  react:
-    container_name: react-app
+  frontend:
+    container_name: frontend
+    image: ${FRONTEND_IMAGE}
     build: ./react-oauth2
     ports:
-      - "3000:3000"
+      - "80:80"
+    depends_on:
+      - backend
 
 volumes:
   db_data:
