--- a/react-oauth2/Dockerfile
+++ b/react-oauth2/Dockerfile
@@ -1,8 +1,4 @@
-FROM node:18-alpine
-WORKDIR /app
-COPY package*.json ./
-RUN npm install
-COPY . .
-RUN npm run build
-EXPOSE 3000
-CMD ["npm", "start"]
+FROM nginx:alpine
+COPY ./build /usr/share/nginx/html
+COPY ./nginx.conf /etc/nginx/nginx.conf
+EXPOSE 80
